# AIRP

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  .pr-body.md  .tmp-commit-msg.txt  AGENTS.md  Cargo.toml  README.en.md  README.md
.github/workflows/: agent-browser-exploration.yml  linux-webui-build.yml  manual-build.yml  pr-gate.yml  webui-windows-build.yml
airp-engine-console/: README.md  STYLEGUIDE.md  airp-engine-console.design  colors_and_type.css  index.html  orchestration-summary.json
airp-engine-console/assets/: app.js  base.css  components.css  screens.js  tokens.css
airp-engine-console/pages/: characters.html  session.html  workbench.html
airp-engine-console/screens/: 01-role-list.html  02-chat-space.html  03-workbench.html  04-world-book.html  05-presets-models.html  05-presets.html  06-user-persona.html  07-agent-runs.html  08-settings.html  09-persona-edit.html  10-greetings.html  11-llm-params.html  12-entry-edit.html  13-import-card.html  14-message-swipe.html  15-confirm-modal.html  16-onboarding.html  17-memory-state.html  18-group-chat.html  19-branch-tree.html  20-assembly-preview.html  21-usage-quota.html  (+11 more)
crates/core/: Cargo.toml
crates/core/data/: settings.json  world.md
crates/core/data/characters/听歌文模拟器/card/: raw.json
crates/core/data/characters/听歌文模拟器/card/greetings/: 00.md  01.md  03.md  05.md  07.md  08.md
crates/core/data/characters/听歌文模拟器/gating/: checkpoints.md  timeline.md
crates/core/data/characters/听歌文模拟器/world/: lorebook.json
crates/core/data/characters/大乾风华录/card/: raw.json
crates/core/data/characters/大乾风华录/card/greetings/: 00.md  03.md  04.md  05.md  06.md
crates/core/data/characters/大乾风华录/gating/: checkpoints.md  timeline.md
crates/core/data/characters/大乾风华录/memory/volumes/: vol_001.md
crates/core/data/characters/大乾风华录/worldbooks/: character_book.md
crates/core/data/presets/LENI/regex/: display_layer.json
crates/core/src/: auto_converter.rs  chat_pipeline.rs  chat_store.rs  error.rs  fsm.rs  lib.rs  main.rs  preset_regex.rs  types.rs  volume_store.rs
crates/core/src/agent/: mod.rs
crates/core/src/chat_pipeline/: tests.rs
crates/core/src/daemon/: mod.rs  types.rs
crates/core/src/data_dir/: migrations.rs  security.rs  session.rs  utils.rs
crates/core/src/fsm/: tests.rs
crates/core/src/orchestrator/: card.rs  preset.rs  volume_inject.rs
crates/core/src/volume_manager/: tests.rs
crates/core/tests/: openai_compat.rs  sse_wiremock.rs
crates/gateway/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/state-protocol/: Cargo.toml
data/: README.md  items.md  settings.json
docs/: ACKNOWLEDGEMENTS.md  AGENT-BROWSER-EXPLORATION-PLAN.md  AGENT-ORCHESTRATION.md  ASSET-SPEC.md  AUDIT-AND-ROADMAP-2026-07.md  CAPABILITY-ABSORPTION.md  CURRENT-BASELINE.md  DEV-GUIDE.md  DOC-AUDIT.md  HERMES-MEMORY.md  LEARN-NEUROBOOK.md  LONG-HISTORY-CONTRACT.md  MCP-SERVER-ABSORPTION.md  PARTS.md  PERSONA-HTTP-API-PLAN.md  PLAN.md  PROJECT-AUDIT-2026-07-10.md  README.md  RISK-REGISTER.md  SECURITY.md  SESSION-DATA-DESIGN.md  SOURCE-PROJECT-DECISIONS.md  TAVERN-PARITY.md  UI-PROTOCOL-DECISION.md  WEBUI-ANALYSIS-AND-OPTIMIZATION.md  WEBUI-AUDIT-v2.md  WEBUI-BACKEND-PLAN.md  WEBUI-BACKEND-VALIDATION.md  WEBUI-DESIGN-DOC-AUDIT.md  WEBUI-MVP-PLAN.md  WEBUI-PRODUCTION-ARCHITECTURE.md  WEBUI-PRODUCTION-PLAN.md  WEBUI-REDESIGN-BACKEND-REQUIREMENTS.md  WORLDBOOK-SEMANTICS.md
engine/: Cargo.toml  README.md
engine/src/: adapter.rs  chat_pipeline.rs  chat_store.rs  config.rs  context_limit.rs  decompose.rs  domain.rs  error.rs  fsm.rs  index_parser.rs  lib.rs  main.rs  outbound.rs  png_parser.rs  quota.rs  scene.rs  secret_store.rs  types.rs  ulid.rs  volume_manager.rs  volume_store.rs  xml_unpacker.rs
engine/src/agent/: mod.rs  tools.rs
engine/src/agent/tools/: analysis.rs  character.rs  npc.rs  params.rs  plot.rs  search.rs  session.rs  state_lorebook.rs  state_preset.rs  volume_context.rs  world_event.rs
engine/src/agent/tools/tests/: agent_rp_phase3.rs  analysis.rs  character.rs  mod.rs  registry.rs  session.rs  state_lorebook.rs  state_preset.rs  volume_context.rs
engine/src/chat_pipeline/: finalize.rs  generation_step.rs  helpers.rs  mod.rs  prepare.rs  prepare_scene.rs  state_extract.rs  stdout_runner.rs  stream.rs  tests.rs  trace.rs  types.rs
engine/src/daemon/: decompose_handlers.rs  handlers.rs  mod.rs  types.rs
engine/src/daemon/handlers/: agent.rs  characters.rs  chat.rs  lorebook.rs  memory.rs  models.rs  personas.rs  presets.rs  scenes.rs  search.rs  sessions.rs  settings.rs  state.rs  style.rs
engine/src/daemon/tests/: catalog.rs  chat.rs  health_settings.rs  local_webui.rs  memory.rs  mod.rs  persona.rs  security.rs  sessions.rs  state_scene.rs  style.rs
engine/src/data_dir/: mod.rs  paths.rs  security.rs  session.rs  utils.rs
engine/src/memory/: compress.rs  extract.rs  fts.rs  mod.rs  resident.rs  user_model.rs
engine/src/orchestrator/: gating.rs  lorebook.rs  mod.rs  preset.rs  trace.rs  volume_inject.rs  worldbook_normalizer.rs
engine/src/revision/: atomic.rs  manifest.rs  mod.rs  tree_hash.rs
engine/src/style/: drift.rs  mod.rs  review.rs
engine/tests/: agent_run.rs  chat_message_branch_endpoint.rs  openai_compat.rs  production_startup.rs  swipe_endpoint.rs
engine/tests/fixtures/worldbook/: airp-v1-basic.json  airp-v2-constant.json  airp-v4-selective.json  sillytavern-character-book-source.json
protocol/: wire-discriminants.json
ui/: README.md  build-engine-sidecar.ps1  build-tauri.ps1  local-webui-browser-smoke.mjs  package-lock.json  package.json  production-browser-restart-smoke.mjs  production-browser-smoke.mjs  smoke-windows-installer.ps1
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: bus.rs  main.rs
webui/: README.md  STYLEGUIDE.md  app.js  assembly-utils.js  history-utils.js  index.html  lorebook-utils.js  mock-provider.js  onboarding.js  persona-utils.js  runtime-config.js  serve.js  shared.js  smoke.mjs  smooth-streamer-utils.js  start.bat  style.css
(+214 files in other folders)
