[workspace]
resolver = "2"
members = [
    "crates/state-protocol",
    "crates/gateway",
    "crates/mcp-server",
    "crates/core",
    "ui/src-tauri",
]

# Unified metadata for the AIRP monorepo.
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GhostXia"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GhostXia/AIRP"
homepage = "https://github.com/GhostXia/AIRP"

# Shared dependency versions, referenced by member crates via `dep.workspace = true`.
# Kept intentionally minimal: only the deps that appear in 2+ crates are pinned here.
[workspace.dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time", "fs", "process", "signal"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
rmcp = { version = "~1.7", features = ["server", "transport-io", "macros", "transport-streamable-http-server"] }
schemars = "0.8"
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }
tokio-util = { version = "0.7", features = ["rt"] }
aho-corasick = "1"
sha2 = "0.10"
once_cell = "1.20"
png = "0.17"
tempfile = "3"
wiremock = "0.6"

# Internal crates — path deps resolved inside the workspace.
airp-state-protocol = { path = "crates/state-protocol" }
airp-gateway = { path = "crates/gateway" }
airp-mcp-server = { path = "crates/mcp-server" }
airp-core = { path = "crates/core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
