[workspace]
resolver = "2"
members = [
    "engine",
    "protocol",
    "ui/src-tauri",
]

# Unified metadata for the AIRP monorepo.
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GhostXia"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/GhostXia/AIRP"
homepage = "https://github.com/GhostXia/AIRP"

# Shared dependency versions, referenced by member crates via `dep.workspace = true`.
# Versions are intentionally permissive (caret, the Cargo default): we only pin
# the major (and where needed minor) floor; patch and compatible minor updates
# are allowed. This keeps the workspace upgradeable instead of frozen.
# Feature sets are the UNION required across all members — a crate that needs
# fewer features simply inherits these; a crate that needs more adds them inline.
[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time", "fs", "process", "signal"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
# rmcp: MCP protocol moves fast; pin a minor floor but allow patch + future
# minors (the source repos used `~1.7` which forbids 1.8 — too strict for a
# monorepo that wants to track upstream). 1.x is the API-stable line.
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
schemars = "0.8"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tokio-util = { version = "0.7", features = ["rt"] }
aho-corasick = "1"
sha2 = "0.10"
once_cell = "1"
png = "0.17"
tempfile = "3"
wiremock = "0.6"
# Deps used by a single crate but hoisted here so the version lives in one place.
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
async-stream = "0.3"
proptest = "1"
toml = "0.8"
url = "2"
tower_governor = "0.4"

# Internal crates — path deps resolved inside the workspace.
airp-state-protocol = { path = "protocol" }
airp-core = { path = "engine" }

# NOTE on `time` pin (Cargo.lock only, no version change here):
# Tauri 2 pulls `cookie 0.18.1`, whose parse.rs calls `time::Parsable::parse`
# with the OLD single-arg signature. `time 0.3.52` changed that API to require
# a second `defaults: Option<Parsed>` arg, breaking cookie 0.18.1's build.
# cookie 0.18 has no patched release, and Tauri pins cookie ^0.18, so the only
# viable workaround is to keep `time` at 0.3.49 in Cargo.lock. Remove this pin
# only after Tauri bumps cookie to a version compatible with time >= 0.3.52.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
