[package]
name = "airp-mcp-server"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AIRP MCP Server - Roleplay data management for MCP-aware clients"

[[bin]]
name = "airp-mcp"
path = "src/main.rs"

[lib]
name = "airp_mcp_server"
path = "src/lib.rs"

[dependencies]
# MCP Protocol
rmcp = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Web framework (for HTTP transport)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# PNG parsing for character cards
png = { workspace = true }

# Regex for lorebook matching
regex = { workspace = true }

# CLI
clap = { workspace = true }

# Base64 encoding/decoding
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
flate2 = { workspace = true }
# ServiceExt::oneshot for in-process HTTP transport tests
tower = { workspace = true }
