[package]
name = "airp-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AIRP UI desktop shell"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Workspace-internal path dep: the Tauri shell mirrors the same wire types the
# UI/Gateway use.
airp-state-protocol = { workspace = true }

[[bin]]
name = "airp-ui"
path = "src/main.rs"
